Fix web issue on mobile

--- a/web/style.css
+++ b/web/style.css
@@ -3,12 +3,14 @@
     --apple-grey: #f5f5f7;
     --apple-text-dark: #1d1d1f;
     --apple-text-grey: #86868b;
-    --container-min-width: 450px;
     --bg-color: #fff;
     --card-bg: #fff;
     --border-color: #d2d2d7;
     --shadow-color: rgba(0, 0, 0, 0.08);
     --input-bg: #fff;
+
+    --container-min-width: 450px;
+    --container-min-height: 600px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -54,7 +56,7 @@ body {
     border: 1px solid var(--border-color);
     box-shadow: 0 4px 12px var(--shadow-color);
     min-width: var(--container-min-width);
-    min-height: 600px;
+    min-height: var(--container-min-height);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -455,4 +457,8 @@ footer {
         margin-bottom: 40px;
     }
 
+    :root {
+        --container-min-width: 0px;
+        --container-min-height: 0px;
+    } 
 }
